k8s-manifests/networking/ing_empty.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress
  namespace: default
spec:
  tls:
    - hosts:
        - ingress-849323.eastus.cloudapp.azure.com
      secretName: tls-sample
  rules:
    - host: ingress-849323.eastus.cloudapp.azure.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gorest
                port:
                  number: 80
